--- a/visualizer/package.json
+++ b/visualizer/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "bulma": "^0.9.4",
     "core-js": "^3.8.3",
+    "d3": "^7.6.1",
+    "numjs": "^0.16.1",
     "plotly.js-dist": "^2.13.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
@@ -26,6 +28,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "node-sass": "^7.0.1",
+    "path-browserify": "^1.0.1",
     "prettier": "^2.4.1",
     "sass-loader": "^13.0.2"
   }
