--- a/visualizer/package.json
+++ b/visualizer/package.json
@@ -8,7 +8,6 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bulma": "^0.9.4",
     "core-js": "^3.8.3",
     "d3": "^7.6.1",
     "plotly.js-dist": "^2.13.1",
@@ -26,9 +25,6 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
-    "node-sass": "^7.0.1",
-    "path-browserify": "^1.0.1",
-    "prettier": "^2.4.1",
-    "sass-loader": "^13.0.2"
+    "prettier": "^2.4.1"
   }
 }
